refactor. 기능별 분리 및 세부 기능 추가 - 문의하기, 공지사항으로 기능 분리 - 페이징 처리 - boardType 받아오는 방식 수정 (기능별로 분리하면서 dto->고정) - 삭제 Hard Delete -> Soft Delete로 변경