@@ -1,11 +1,15 @@
 package com.example.contentservice.board.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.RequestParam;
 
+import com.example.commonmodule.common.PagingDto;
 import com.example.contentservice.board.dto.BoardRequestDto;
 import com.example.contentservice.board.dto.BoardResponseDto;
 import com.example.contentservice.board.entity.Board;
@@ -17,16 +21,17 @@ import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
-public class BoardServiceImpl implements BoardService {
+public class NoticeServiceImpl implements BoardService {
 
 	private final BoardRepository boardRepository;
 
 	@Transactional
-	public BoardResponseDto createBoard(BoardRequestDto requestDto, Long userId) {
+	public BoardResponseDto createBoard(BoardRequestDto requestDto, Long userId, BoardType boardType) {
+
 		Board board = Board.builder()
 			.title(requestDto.getTitle())
 			.content(requestDto.getContent())
-			.boardType(requestDto.getBoardType())
+			.boardType(boardType)
 			.userId(userId)
 			.build();
 		boardRepository.save(board);
@@ -35,30 +40,33 @@ public class BoardServiceImpl implements BoardService {
 	}
 
 	public BoardResponseDto getBoard(Long boardId) {
-		Board board = boardRepository.findById(boardId)
-			.orElseThrow(() -> new IllegalArgumentException("Board not found"));
+		Board board = boardRepository.findByIdOrElseThrow(boardId);
 		return BoardResponseDto.toDto(board);
 	}
 
-	public List<BoardResponseDto> getBoards(@RequestParam BoardType boardType) {
-		return boardRepository.findAllByBoardType(boardType).stream()
+	public PagingDto<BoardResponseDto> getBoardsAndPaging(int page, @RequestParam BoardType boardType) {
+		Pageable pageable = PageRequest.of(page, 10, Sort.by(Sort.Direction.DESC, "id"));
+		Page<Board> boardPage = boardRepository.findAllByBoardType(boardType, pageable);
+
+		List<BoardResponseDto> boardDtoList = boardPage.getContent().stream()
 			.map(BoardResponseDto::toDto)
-			.collect(Collectors.toList());
+			.toList();
+
+		return new PagingDto<>(boardDtoList, boardPage.getTotalElements());
 	}
 
 	@Transactional
 	public BoardResponseDto updateBoard(Long boardId, BoardRequestDto requestDto) {
-		Board board = boardRepository.findById(boardId)
-			.orElseThrow(() -> new IllegalArgumentException("Board not found"));
-		board.update(requestDto.getTitle(), requestDto.getContent(), requestDto.getBoardType());
+		Board board = boardRepository.findByIdOrElseThrow(boardId);
+		board.update(requestDto.getTitle(), requestDto.getContent());
 		boardRepository.save(board);
 		return BoardResponseDto.toDto(board);
 	}
 
 	@Transactional
 	public void deleteBoard(Long boardId) {
-		Board board = boardRepository.findById(boardId)
-			.orElseThrow(() -> new IllegalArgumentException("Board not found"));
-		boardRepository.delete(board);
+		Board board = boardRepository.findByIdOrElseThrow(boardId);
+		board.delete();
+		boardRepository.save(board);
 	}
 }
